--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.pedromihael.cellphonedatabase"
+        applicationId "com.pedromihael.desmascarandoapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -40,6 +40,8 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
